--- a/AlzheiGames/app/src/main/res/layout/activity_registro_paciente.xml
+++ b/AlzheiGames/app/src/main/res/layout/activity_registro_paciente.xml
@@ -16,9 +16,15 @@
             android:layout_marginRight="25dp"
             android:gravity="center"
             android:orientation="vertical">
-
-
-
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textSize="24dp"
+                android:layout_marginBottom="30dp"
+                android:layout_marginTop="25dp"
+                android:gravity="center"
+                android:text="REGISTRAR PACIENTE"
+                />
 
             <EditText
                 android:id="@+id/regUsuario"
@@ -71,6 +77,16 @@
                 android:hint="Telefono"
                 android:inputType="text"
                 android:paddingLeft="5dp" />
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textSize="18dp"
+                android:layout_marginStart="8dp"
+                android:layout_marginTop="10dp"
+                android:layout_marginEnd="8dp"
+                android:text="Medico"
+                />
+
             <Spinner
                 android:id="@+id/spinnerMedico"
                 android:layout_width="wrap_content"
@@ -85,6 +101,15 @@
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/textView52"
                 app:layout_constraintVertical_bias="0.061" />
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textSize="18dp"
+                android:layout_marginStart="8dp"
+                android:layout_marginTop="10dp"
+                android:layout_marginEnd="8dp"
+                android:text="Cuidador"
+                />
             <Spinner
                 android:id="@+id/spinnerCuiador"
                 android:layout_width="wrap_content"
@@ -99,6 +124,15 @@
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/textView52"
                 app:layout_constraintVertical_bias="0.061" />
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textSize="18dp"
+                android:layout_marginStart="8dp"
+                android:layout_marginTop="10dp"
+                android:layout_marginEnd="8dp"
+                android:text="Grado de Alzheimer"
+                />
             <Spinner
                 android:id="@+id/spinnerGrado"
                 android:layout_width="wrap_content"
