--- a/AlzheiGames/app/src/main/res/layout/activity_menu_registro.xml
+++ b/AlzheiGames/app/src/main/res/layout/activity_menu_registro.xml
@@ -8,6 +8,14 @@
     <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
+        <android.widget.Toolbar
+            android:id="@+id/my_toolbar"
+            android:layout_width="match_parent"
+            android:layout_height="?attr/actionBarSize"
+            android:background="?attr/colorPrimaryDark"
+            android:elevation="4dp"
+            android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
+            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -17,12 +25,22 @@
             android:gravity="center"
             android:orientation="vertical">
 
+
             <ImageView
                 android:id="@+id/imageView"
                 android:layout_width="341dp"
                 android:layout_height="108dp"
                 android:layout_marginBottom="40dp"
                 app:srcCompat="@drawable/logo" />
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textSize="18dp"
+                android:layout_marginBottom="30dp"
+                android:layout_marginTop="25dp"
+                android:gravity="center"
+                android:text="¿Como se desea Registrar?"
+                />
 
             <Button
                 android:id="@+id/opcPaciente"
