--- a/AlzheiGames/app/src/main/res/layout/activity_paciente.xml
+++ b/AlzheiGames/app/src/main/res/layout/activity_paciente.xml
@@ -5,27 +5,90 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".PacienteActivity">
-    <LinearLayout
+
+    <TableLayout
+        android:id="@+id/tableLayout"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:gravity="center"
-        android:orientation="vertical">
+        android:gravity="center_horizontal|center_vertical">
 
-        <ImageView
-            android:id="@+id/imageView2"
-            android:layout_width="234dp"
-            android:layout_height="321dp"
-            app:srcCompat="@drawable/icon_user" />
-
-        <TextView
-            android:id="@+id/textView"
+        <TableRow
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:gravity="center"
-            android:text="BIENVENIDO PACIENTE"
-            android:textSize="36sp"
-            android:textStyle="bold" />
+            android:paddingTop="40px"
+            android:paddingBottom="40px">
 
-    </LinearLayout>
+            <androidx.cardview.widget.CardView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                app:cardBackgroundColor="#AFBCFF"
+                app:cardCornerRadius="13dp">
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:gravity="center"
+                    android:orientation="horizontal">
+
+                    <ImageView
+                        android:id="@+id/imageView"
+                        android:layout_width="150px"
+                        android:layout_height="100px"
+                        app:srcCompat="@drawable/videojuego" />
+
+                    <Button
+                        android:id="@+id/juego"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:backgroundTint="#004AA5"
+                        android:onClick="juegos_btn"
+                        android:text="@string/btn_juego" />
+
+                </LinearLayout>
+
+            </androidx.cardview.widget.CardView>
+        </TableRow>
+
+        <TableRow
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:gravity="center"
+            android:paddingTop="40px"
+            android:paddingBottom="40px">
+
+            <androidx.cardview.widget.CardView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                app:cardBackgroundColor="#AFBCFF"
+                app:cardCornerRadius="13dp">
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:gravity="center"
+                    android:orientation="horizontal">
+
+                    <ImageView
+                        android:id="@+id/imageView2"
+                        android:layout_width="150px"
+                        android:layout_height="100px"
+                        android:layout_weight="1"
+                        app:srcCompat="@drawable/doctor" />
+
+                    <Button
+                        android:id="@+id/asistencia"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:backgroundTint="#004AA5"
+                        android:onClick="teleasistencia_btn"
+                        android:text="@string/btn_asistencia" />
+
+                </LinearLayout>
+
+            </androidx.cardview.widget.CardView>
+        </TableRow>
+
+    </TableLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
