cuidador medico layout

--- a/AlzheiGames/app/src/main/res/layout/activity_cuidador.xml
+++ b/AlzheiGames/app/src/main/res/layout/activity_cuidador.xml
@@ -5,26 +5,53 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".CuidadorActivity">
+
     <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_width="434dp"
+        android:layout_height="803dp"
+        android:background="#FDEBD0"
         android:gravity="center"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.333">
 
         <ImageView
             android:id="@+id/imageView2"
-            android:layout_width="234dp"
-            android:layout_height="321dp"
-            app:srcCompat="@drawable/icon_user" />
+            android:layout_width="129dp"
+            android:layout_height="139dp"
+            app:srcCompat="@drawable/icon_cuidador" />
 
         <TextView
             android:id="@+id/textView"
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:gravity="center"
-            android:text="BIENVENIDO AL SISTEMA CUIDADOR"
+            android:text="@string/bienvenido_cuidador"
             android:textSize="36sp"
             android:textStyle="bold" />
+
+        <Button
+            android:id="@+id/btnResultado"
+            android:layout_width="412dp"
+            android:layout_height="176dp"
+            android:layout_marginLeft="15dp"
+            android:layout_marginTop="30dp"
+            android:layout_marginRight="15dp"
+            android:background="@drawable/result2"
+            android:textSize="36sp" />
+
+        <Button
+            android:id="@+id/btnAsistencia"
+            android:layout_width="412dp"
+            android:layout_height="176dp"
+            android:layout_marginLeft="15dp"
+            android:layout_marginTop="30dp"
+            android:layout_marginRight="15dp"
+            android:background="@drawable/asistencia"
+            android:textSize="36sp" />
 
     </LinearLayout>
 
