--- a/AlzheiGames/app/src/main/res/layout/activity_medico.xml
+++ b/AlzheiGames/app/src/main/res/layout/activity_medico.xml
@@ -1,31 +1,57 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".MedicoActivity">
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
+xmlns:app="http://schemas.android.com/apk/res-auto"
+xmlns:tools="http://schemas.android.com/tools"
+android:layout_width="match_parent"
+android:layout_height="match_parent"
+tools:context=".MedicoActivity">
+
+<LinearLayout
+    android:layout_width="434dp"
+    android:layout_height="803dp"
+    android:background="#DCFBD7"
+    android:gravity="center"
+    android:orientation="vertical"
+    app:layout_constraintBottom_toBottomOf="parent"
+    app:layout_constraintEnd_toEndOf="parent"
+    app:layout_constraintStart_toStartOf="parent"
+    app:layout_constraintTop_toTopOf="parent"
+    app:layout_constraintVertical_bias="0.333">
+
+    <ImageView
+        android:id="@+id/imageView2"
+        android:layout_width="152dp"
+        android:layout_height="130dp"
+        app:srcCompat="@drawable/icon_doctor" />
+
+    <TextView
+        android:id="@+id/textView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:gravity="center"
-        android:orientation="vertical">
+        android:text="Bienvenido Medico"
+        android:textSize="36sp"
+        android:textStyle="bold" />
 
-        <ImageView
-            android:id="@+id/imageView2"
-            android:layout_width="234dp"
-            android:layout_height="321dp"
-            app:srcCompat="@drawable/icon_user" />
+    <Button
+        android:id="@+id/btnResultado"
+        android:layout_width="412dp"
+        android:layout_height="176dp"
+        android:layout_marginLeft="15dp"
+        android:layout_marginTop="30dp"
+        android:layout_marginRight="15dp"
+        android:background="@drawable/resultadosbtn"
+        android:textSize="36sp" />
 
-        <TextView
-            android:id="@+id/textView"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:gravity="center"
-            android:text="BIENVENIDO AL MEDICO"
-            android:textSize="36sp"
-            android:textStyle="bold" />
-
-    </LinearLayout>
+    <Button
+        android:id="@+id/btnAsistencia"
+        android:layout_width="412dp"
+        android:layout_height="176dp"
+        android:layout_marginLeft="15dp"
+        android:layout_marginTop="30dp"
+        android:layout_marginRight="15dp"
+        android:background="@drawable/asistencia_med"
+        android:textSize="36sp" />
+</LinearLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
