--- a/AlzheiGames/app/src/main/res/layout/activity_cuidador.xml
+++ b/AlzheiGames/app/src/main/res/layout/activity_cuidador.xml
@@ -29,7 +29,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:gravity="center"
-            android:text="@string/bienvenido_cuidador"
+            android:text="Bienvenido Cuidador"
             android:textSize="36sp"
             android:textStyle="bold" />
 
