--- a/AlzheiGames/app/src/main/res/layout/activity_menu_registro.xml
+++ b/AlzheiGames/app/src/main/res/layout/activity_menu_registro.xml
@@ -8,15 +8,6 @@
     <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
-        <android.widget.Toolbar
-            android:id="@+id/my_toolbar"
-            android:layout_width="match_parent"
-            android:layout_height="?attr/actionBarSize"
-            android:background="?attr/colorPrimaryDark"
-            android:elevation="4dp"
-            android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
-            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>
-
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
@@ -24,7 +15,6 @@
             android:layout_marginRight="25dp"
             android:gravity="center"
             android:orientation="vertical">
-
 
             <ImageView
                 android:id="@+id/imageView"
@@ -36,8 +26,8 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textSize="18dp"
-                android:layout_marginBottom="30dp"
-                android:layout_marginTop="25dp"
+                android:layout_marginBottom="10dp"
+                android:layout_marginTop="10dp"
                 android:gravity="center"
                 android:text="¿Como se desea Registrar?"
                 />
@@ -73,6 +63,17 @@
                 android:layout_marginRight="15dp"
                 android:background="#1976d2"
                 android:text="Cuidador"
+                android:textColor="#FFF"
+                android:textSize="18sp" />
+            <Button
+                android:id="@+id/opcSalir"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="15dp"
+                android:layout_marginTop="30dp"
+                android:layout_marginRight="15dp"
+                android:background="@color/colorPrimaryDark"
+                android:text="Salir"
                 android:textColor="#FFF"
                 android:textSize="18sp" />
 
