--- a/AlzheiGames/app/src/main/res/layout/activity_medico.xml
+++ b/AlzheiGames/app/src/main/res/layout/activity_medico.xml
@@ -19,7 +19,7 @@ tools:context=".MedicoActivity">
     app:layout_constraintVertical_bias="0.333">
 
     <ImageView
-        android:id="@+id/imageView2"
+        android:id="@+id/imagen"
         android:layout_width="152dp"
         android:layout_height="130dp"
         app:srcCompat="@drawable/icon_doctor" />
@@ -44,7 +44,7 @@ tools:context=".MedicoActivity">
         android:textSize="36sp" />
 
     <Button
-        android:id="@+id/btnAsistencia"
+        android:id="@+id/btnConfirmar"
         android:layout_width="412dp"
         android:layout_height="176dp"
         android:layout_marginLeft="15dp"
