--- a/AlzheiGames/app/src/main/res/layout/activity_menu_juegos.xml
+++ b/AlzheiGames/app/src/main/res/layout/activity_menu_juegos.xml
@@ -71,8 +71,21 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="10dp"
-                        android:text="JUEGO 2"
+                        android:text="ADIVINA"
                         android:textStyle="bold" />
+
+                    <Button
+                        android:id="@+id/btnJugarAdivina"
+                        android:layout_width="100dp"
+                        android:layout_height="50dp"
+                        android:layout_marginLeft="15dp"
+                        android:layout_marginTop="30dp"
+                        android:layout_marginRight="15dp"
+                        android:background="@color/colorAccent"
+                        android:text="JUGAR"
+                        android:textAlignment="center"
+                        android:textSize="14sp" />
+
                 </LinearLayout>
 
             </androidx.cardview.widget.CardView>
@@ -100,7 +113,7 @@
                     android:orientation="vertical">
 
                     <ImageView
-                        android:id="@+id/imageView2"
+                        android:id="@+id/imagen"
                         android:layout_width="64dp"
                         android:layout_height="64dp"
                         app:srcCompat="@drawable/ic_launcher_background" />
