--- a/AlzheiGames/app/src/main/res/layout/activity_paciente.xml
+++ b/AlzheiGames/app/src/main/res/layout/activity_paciente.xml
@@ -70,7 +70,7 @@
                     android:orientation="horizontal">
 
                     <ImageView
-                        android:id="@+id/imageView2"
+                        android:id="@+id/imagen"
                         android:layout_width="150px"
                         android:layout_height="100px"
                         android:layout_weight="1"
