--- a/AlzheiGames/app/src/main/res/layout/activity_menu_juegos.xml
+++ b/AlzheiGames/app/src/main/res/layout/activity_menu_juegos.xml
@@ -33,7 +33,7 @@
                     android:orientation="vertical">
 
                     <ImageView
-                        android:id="@+id/imageView4"
+                        android:id="@+id/memorama"
                         android:layout_width="64dp"
                         android:layout_height="64dp"
                         app:srcCompat="@drawable/ic_launcher_background" />
@@ -42,7 +42,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="10dp"
-                        android:text="JUEGO 1"
+                        android:text="MEMORAMA"
                         android:textStyle="bold" />
                 </LinearLayout>
 
