--- a/AlzheiGames/app/src/main/res/layout/list_layout.xml
+++ b/AlzheiGames/app/src/main/res/layout/list_layout.xml
@@ -10,11 +10,11 @@
 
         <androidx.cardview.widget.CardView
             android:layout_width="match_parent"
-            android:layout_height="match_parent" >
+            android:layout_height="wrap_content">
 
             <RelativeLayout
                 android:layout_width="match_parent"
-                android:layout_height="match_parent">
+                android:layout_height="wrap_content">
 
                 <LinearLayout
                     android:layout_width="match_parent"
