--- a/AlzheiGames/app/src/main/res/layout/activity_menu_juegos.xml
+++ b/AlzheiGames/app/src/main/res/layout/activity_menu_juegos.xml
@@ -4,7 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MenuJuegosActivity">
+    tools:context=".MenuJuegosActivity"
+    android:background="#F26D50">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -36,7 +37,7 @@
                         android:id="@+id/memorama"
                         android:layout_width="64dp"
                         android:layout_height="64dp"
-                        app:srcCompat="@drawable/ic_launcher_background" />
+                        app:srcCompat="@drawable/memologo" />
 
                     <TextView
                         android:layout_width="wrap_content"
@@ -44,6 +45,17 @@
                         android:layout_marginTop="10dp"
                         android:text="MEMORAMA"
                         android:textStyle="bold" />
+                    <Button
+                        android:id="@+id/btnMemorama"
+                        android:layout_width="100dp"
+                        android:layout_height="50dp"
+                        android:layout_marginLeft="15dp"
+                        android:layout_marginTop="30dp"
+                        android:layout_marginRight="15dp"
+                        android:background="@color/cardview_shadow_start_color"
+                        android:text="JUGAR"
+                        android:textAlignment="center"
+                        android:textSize="14sp" />
                 </LinearLayout>
 
             </androidx.cardview.widget.CardView>
@@ -65,7 +77,7 @@
                         android:id="@+id/imageView3"
                         android:layout_width="64dp"
                         android:layout_height="64dp"
-                        app:srcCompat="@drawable/ic_launcher_background" />
+                        app:srcCompat="@drawable/adivinanzalogo" />
 
                     <TextView
                         android:layout_width="wrap_content"
@@ -81,11 +93,10 @@
                         android:layout_marginLeft="15dp"
                         android:layout_marginTop="30dp"
                         android:layout_marginRight="15dp"
-                        android:background="@color/colorAccent"
+                        android:background="@color/cardview_shadow_start_color"
                         android:text="JUGAR"
                         android:textAlignment="center"
                         android:textSize="14sp" />
-
                 </LinearLayout>
 
             </androidx.cardview.widget.CardView>
@@ -115,47 +126,30 @@
                     <ImageView
                         android:id="@+id/imagen"
                         android:layout_width="64dp"
-                        android:layout_height="64dp"
-                        app:srcCompat="@drawable/ic_launcher_background" />
+                        android:layout_height="52dp"
+                        app:srcCompat="@drawable/rclogo" />
 
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="10dp"
-                        android:text="JUEGO 3"
+                        android:text="Rompecabezas"
                         android:textStyle="bold" />
+                    <Button
+                        android:id="@+id/btnRompeCa"
+                        android:layout_width="100dp"
+                        android:layout_height="50dp"
+                        android:layout_marginLeft="15dp"
+                        android:layout_marginTop="30dp"
+                        android:layout_marginRight="15dp"
+                        android:background="@color/cardview_shadow_start_color"
+                        android:text="JUGAR"
+                        android:textAlignment="center"
+                        android:textSize="14sp" />
                 </LinearLayout>
 
             </androidx.cardview.widget.CardView>
 
-            <androidx.cardview.widget.CardView
-                android:clickable="true"
-                android:foreground="?android:attr/selectableItemBackground"
-                android:layout_width="160dp"
-                android:layout_height="190dp"
-                android:layout_margin="10dp">
-
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:gravity="center"
-                    android:orientation="vertical">
-
-                    <ImageView
-                        android:id="@+id/imageView5"
-                        android:layout_width="64dp"
-                        android:layout_height="64dp"
-                        app:srcCompat="@drawable/ic_launcher_background" />
-
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginTop="10dp"
-                        android:text="JUEGO 4"
-                        android:textStyle="bold" />
-                </LinearLayout>
-
-            </androidx.cardview.widget.CardView>
 
         </LinearLayout>
 
