--- a/AlzheiGames/app/src/main/res/layout/activity_menu_juegos.xml
+++ b/AlzheiGames/app/src/main/res/layout/activity_menu_juegos.xml
@@ -149,6 +149,45 @@
                 </LinearLayout>
 
             </androidx.cardview.widget.CardView>
+            <androidx.cardview.widget.CardView
+                android:clickable="true"
+                android:foreground="?android:attr/selectableItemBackground"
+                android:layout_width="160dp"
+                android:layout_height="190dp"
+                android:layout_margin="10dp">
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:gravity="center"
+                    android:orientation="vertical">
+
+                    <ImageView
+                        android:id="@+id/MenuPrincipal"
+                        android:layout_width="64dp"
+                        android:layout_height="52dp"
+                        app:srcCompat="@drawable/menuprincipal" />
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="10dp"
+                        android:text="Menu Principal"
+                        android:textStyle="bold" />
+                    <Button
+                        android:id="@+id/btnMenuPrincipal"
+                        android:layout_width="100dp"
+                        android:layout_height="50dp"
+                        android:layout_marginLeft="15dp"
+                        android:layout_marginTop="30dp"
+                        android:layout_marginRight="15dp"
+                        android:background="@color/cardview_shadow_start_color"
+                        android:text="REGRESAR"
+                        android:textAlignment="center"
+                        android:textSize="14sp" />
+                </LinearLayout>
+
+            </androidx.cardview.widget.CardView>
 
 
         </LinearLayout>
