--- a/AlzheiGames/app/src/main/res/layout/activity_menu_juegos.xml
+++ b/AlzheiGames/app/src/main/res/layout/activity_menu_juegos.xml
@@ -48,7 +48,7 @@
                         android:id="@+id/imagen"
                         android:layout_width="130dp"
                         android:layout_height="match_parent"
-                        app:srcCompat="@drawable/rclogo" />
+                        app:srcCompat="@drawable/seguir" />
 
                     <LinearLayout
                         android:layout_width="match_parent"
@@ -59,7 +59,7 @@
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:layout_marginTop="10dp"
-                            android:text="Rompecabezas"
+                            android:text="REPITE LA SECUENCIA"
                             android:textAlignment="center"
                             android:textSize="24sp"
                             android:textStyle="bold" />
