--- a/AlzheiGames/app/src/main/res/layout/activity_chat.xml
+++ b/AlzheiGames/app/src/main/res/layout/activity_chat.xml
@@ -8,8 +8,8 @@
 
     <EditText
         android:id="@+id/etMensaje"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="388dp"
+        android:layout_height="71dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
