--- a/AlzheiGames/app/src/main/res/layout/activity_juego_adivina_e_j.xml
+++ b/AlzheiGames/app/src/main/res/layout/activity_juego_adivina_e_j.xml
@@ -101,7 +101,7 @@
                 tools:layout_editor_absoluteY="0dp" />
 
             <Button
-                android:id="@+id/btnConfirmar"
+                android:id="@+id/btnTeleasistencia"
                 android:layout_width="370dp"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="15dp"
