--- a/AlzheiGames/app/src/main/res/layout/activity_emergencia.xml
+++ b/AlzheiGames/app/src/main/res/layout/activity_emergencia.xml
@@ -5,18 +5,41 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".emergenciaActivity">
+    <LinearLayout
+        android:orientation="vertical"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:gravity="center"
+        android:background="#F2D7D5">
+        <TextView
+            android:layout_width="250dp"
+            android:layout_height="100dp"
+            android:text="SOLICITAR AYUDA"
+            android:textSize="26dp"
+            android:gravity="center"
+            android:textColor="#E74C3C "
+            android:textStyle="bold"
+            ></TextView>
+        <ImageView
+            android:id="@+id/idEmergencia"
+            android:layout_width="117dp"
+            android:layout_height="76dp"
+            app:srcCompat="@drawable/emergencia" />
 
-    <Button
-        android:id="@+id/btnSolicitarAyuda"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="8dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="56dp"
-        android:text="ENVIAR"
-        android:textSize="18sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        <Button
+            android:id="@+id/btnSolicitarAyuda"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="8dp"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="56dp"
+            android:text="Presione aqui "
+            android:textSize="20sp"
+            android:backgroundTint="#E31E1E"
+            android:textColor="#FFFFFF"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+    </LinearLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
