--- a/AlzheiGames/app/src/main/res/layout/activity_medico_ver_resultado.xml
+++ b/AlzheiGames/app/src/main/res/layout/activity_medico_ver_resultado.xml
@@ -13,7 +13,8 @@
 
     <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:layout_marginBottom="20dp">
 
       <LinearLayout
           android:layout_width="match_parent"
@@ -35,13 +36,14 @@
 
         <Spinner
             android:id="@+id/spinnerPPP"
-            android:layout_width="299dp"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
             android:layout_marginTop="8dp"
             android:layout_marginEnd="8dp"
             android:layout_marginBottom="?attr/dialogPreferredPadding"
             android:padding="?attr/dialogPreferredPadding"
+            android:scrollbarSize="10dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.434"
@@ -68,17 +70,9 @@
             android:id="@+id/textPrueba"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="PROGRESO"
+            android:text="PUNTOS TOTALES OBTENIDOS"
             android:textAlignment="center"
             android:textColor="#FD510D "
-            android:textSize="24sp"
-            android:textStyle="bold" />
-
-        <TextView
-            android:id="@+id/textView5"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Puntos Obtenidos"
             android:textSize="24sp"
             android:textStyle="bold" />
 
@@ -86,6 +80,8 @@
             android:id="@+id/textPuntaje"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginTop="20dp"
+            android:layout_marginBottom="20dp"
             android:text="- - - - -"
             android:textAlignment="center"
             android:textColor="#1849FD"
@@ -95,22 +91,28 @@
             android:id="@+id/textView7"
             android:layout_width="match_parent"
             android:layout_height="31dp"
-            android:text="DETALLES"
+            android:layout_marginTop="20dp"
+            android:layout_marginBottom="20dp"
+            android:text="SELECCIONE EL JUEGO"
             android:textAlignment="center"
             android:textColor="#FD510D "
             android:textSize="24sp"
             android:textStyle="bold" />
 
-        <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/my_recycler_view"
-            android:scrollbars="vertical"
+        <Spinner
+            android:id="@+id/spinnerJuegos"
             android:layout_width="match_parent"
-            android:layout_height="match_parent" />
+            android:layout_height="53dp" />
 
-        <ListView
-            android:id="@+id/listaResultados"
+        <Button
+            android:id="@+id/btnDetalle"
             android:layout_width="match_parent"
-            android:layout_height="match_parent" />
+            android:layout_height="wrap_content"
+            android:background="#F4511E"
+            android:text="Ver Detalle del Juego"
+            android:textColor="#FFFFFF"
+            android:textSize="18sp"
+            android:textStyle="bold" />
 
       </LinearLayout>
 
