--- a/AlzheiGames/app/src/main/res/layout/list_layout.xml
+++ b/AlzheiGames/app/src/main/res/layout/list_layout.xml
@@ -1,20 +1,24 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:layout_marginBottom="10dp">
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
+        android:background="#FFEEC3"
         android:orientation="vertical">
 
         <androidx.cardview.widget.CardView
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            android:background="#FFEEC3">
 
             <RelativeLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content">
+                android:layout_height="wrap_content"
+                android:background="#FFEEC3">
 
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -23,7 +27,6 @@
                     android:layout_marginTop="?attr/listPreferredItemPaddingLeft"
                     android:layout_marginEnd="@dimen/nav_header_vertical_spacing"
                     android:layout_marginBottom="?attr/listPreferredItemPaddingLeft"
-                    android:background="#FFEEC3"
                     android:orientation="vertical">
 
                     <TextView
