--- a/AlzheiGames/app/src/main/res/layout/activity_menu_registro.xml
+++ b/AlzheiGames/app/src/main/res/layout/activity_menu_registro.xml
@@ -5,6 +5,9 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".MenuRegistroActivity">
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
     <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
@@ -79,5 +82,6 @@
 
         </LinearLayout>
     </FrameLayout>
+    </ScrollView>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
