--- a/AlzheiGames/app/src/main/res/layout/activity_menu_teleasistencia.xml
+++ b/AlzheiGames/app/src/main/res/layout/activity_menu_teleasistencia.xml
@@ -6,6 +6,9 @@
     android:layout_height="match_parent"
     android:background="#D0D3D4"
     tools:context=".MenuTeleasistencia">
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
     <TableLayout
         android:id="@+id/tableLayout"
         android:layout_width="match_parent"
@@ -153,6 +156,7 @@
         </TableRow>
 
     </TableLayout>
+    </ScrollView>
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
