--- a/AlzheiGames/app/src/main/res/layout/activity_registro_cuidador.xml
+++ b/AlzheiGames/app/src/main/res/layout/activity_registro_cuidador.xml
@@ -5,6 +5,9 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".RegistroCuidadorActivity">
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
     <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
@@ -36,6 +39,7 @@
                 android:backgroundTint="@android:color/darker_gray"
                 android:ems="10"
                 android:hint="Nombre"
+                android:digits="ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz "
                 android:inputType="textPersonName"
                 android:paddingLeft="5dp" />
             <EditText
@@ -62,6 +66,7 @@
                 android:hint="Password"
                 android:inputType="textPassword"
                 android:paddingLeft="5dp" />
+
             <EditText
                 android:id="@+id/regTelefonoCui"
                 android:layout_width="match_parent"
@@ -70,11 +75,12 @@
                 android:layout_marginTop="10dp"
                 android:layout_marginEnd="8dp"
                 android:backgroundTint="@android:color/darker_gray"
-
                 android:ems="10"
                 android:hint="Telefono"
                 android:inputType="text"
-                android:paddingLeft="5dp" />
+                android:maxLength="10"
+                android:paddingLeft="5dp"
+                android:phoneNumber="false" />
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -112,6 +118,7 @@
 
         </LinearLayout>
     </FrameLayout>
+    </ScrollView>
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
